# RosProgramming

./: README.md  run.sh
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/simple_planner_rp/: .catkin  local_setup.sh  setup.sh
devel/.private/simple_planner_rp/lib/pkgconfig/: simple_planner_rp.pc
devel/.private/simple_planner_rp/lib/simple_planner_rp/: node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  simple_planner_rp.pc
devel/lib/simple_planner_rp/: node
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/simple_planner_rp/cmake/: simple_planner_rpConfig-version.cmake  simple_planner_rpConfig.cmake
logs/simple_planner_rp/: build.cmake.005.log.stderr  build.cmake.007.log.stderr  build.cmake.008.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
maps/: map.pgm  map.rviz  map.yaml
src/: CMakeLists.txt  RViz.cpp  RViz.h  map_manag.cpp  map_manag.h  node.cpp  package.xml  path_finder.cpp  path_finder.h  sp.launch
your_workspace/readme.txt/: run.txt
your_workspace/src/roscpp/: base_link_node.cpp  goal_node.cpp  grid_map_node.cpp  package.xml  planner_node.cpp
your_workspace/src/roscpp/base/: grid_map.cpp  grid_map.h
(+2 files in other folders)
